# computer-graphics

./: .gitignore  CMakeLists.txt
hw1/: Makefile  gears.c
hw2/: Makefile  README  lorenz.c
hw3/: README  hw3.c
hw4/: README  hw4.c
hw5/: README  hw5.c  makefile
lec01/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c
lec03/ex6/: ex6.c
lec03/ex7/: ex7.c
lec04/ex8/: ex8.c
lec04/ex9/: ex9.c
lec11/: ex27.c
